Clean up Pack patch